# postgres-extension.rs

./: Cargo.toml
examples/bgworker-spi/: Cargo.toml
examples/bgworker-spi/src/: lib.rs
examples/udf-error/: Cargo.toml  build.rs
examples/udf-error/src/: lib.rs
examples/udf-spi/: Cargo.toml
examples/udf-spi/src/: lib.rs
pg-config/: Cargo.toml
pg-config/src/: lib.rs
postgres-extension-macro/: Cargo.toml
postgres-extension-macro/src/: lib.rs
src/: c.rs  fmgr.rs  lib.rs  pg_config.rs  postgres.rs  postgres_ext.rs  rust_utils.rs  setjmp.rs
src/access/: mod.rs  xact.rs
src/executor/: mod.rs  spi.rs
src/postmaster/: bgworker.rs  mod.rs
src/utils/: elog.rs  memutils.rs  mod.rs  palloc.rs
