[package]
name = "postgres-extension"
version = "0.1.1"
authors = ["Jeff Davis <jdavis@postgresql.org>"]
edition = "2018"
license = "PostgreSQL OR MIT"
description = "Write PostgreSQL extensions in rust"
repository = "https://github.com/jeff-davis/postgres-extension.rs"

[dependencies]
libc = "0.2.47"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
