[package]
name = "postgres-extension-macro"
version = "0.1.1"
authors = ["Jeff Davis <jdavis@postgresql.org>"]
edition = "2018"
license = "PostgreSQL OR MIT"
description = "macro crate for postgres-extension"
repository = "https://github.com/jeff-davis/postgres-extension.rs"

[lib]
proc-macro = true
