[package]
name = "bgworker-spi"
version = "0.1.0"
authors = ["Jeff Davis <jdavis@postgresql.org>"]
edition = "2018"

[dependencies]
postgres-extension = { path = "../.." }
postgres-extension-macro = { path = "../../postgres-extension-macro" }

[dependencies.tokio]
version = "0.3"
features = ["net","io-util", "rt", "macros"]

[lib]
crate-type = ["cdylib"]
