[package]
name = "udf-error"
version = "0.1.0"
authors = ["Jeff Davis <jdavis@postgresql.org>"]
edition = "2018"

[dependencies]
postgres-extension = { path = "../.." }
postgres-extension-macro = { path = "../../postgres-extension-macro" }
cdylib-plugin = "^0.1"
postgres-util = "^0.1"

[build-dependencies]
cdylib-plugin = "^0.1"

[lib]
crate-type = ["cdylib"]
test = false
bench = false

[[bin]]
name = "libinstall"
